# Electromart

./: README.md
backend/: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  seed.py
backend/app/agents/: graph.py  marketing_agent.py  orders_agent.py  purchase_agent.py  router.py  sales_agent.py  support_agent.py
backend/app/core/: config.py
backend/app/models/: __init__.py  conversation.py  faq.py  lead.py  message.py  order.py  product.py  promotion.py  return_request.py  ticket.py
backend/app/schemas/: chat.py
backend/app/services/: chat_store.py  faq_rag.py  llm.py  mailer.py  tools.py
backend/scripts/: eval_router_intents.py
backend/tests/: router_intent_cases.jsonl  test_router_intent.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
